# dxf_reader

./: CMakeLists.txt  README.md  dxfreader.cpp  dxfreader.h  main.cpp  test.dxf
dxflib/: dl_entities.h
